cmss/main/default/objects/Opportunity/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>Autor, který vytvořil opportunitu</description>
    <label>Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>