cmss/main/default/objects/Opportunity/fields/CampaignMember__c.field-meta.xml
<CustomField>
    <fullName>CampaignMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Member</label>
    <referenceTo>CampaignMember__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>