cmss/main/default/objects/Opportunity/fields/CombineOpportunityName__c.field-meta.xml
<CustomField>
    <fullName>CombineOpportunityName__c</fullName>
    <formula>Name &amp; &quot; &quot; &amp; Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combine Opportunity Name</label>
    <type>Text</type>
</CustomField>