cmss/main/default/objects/Opportunity/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <label>Created Date Time</label>
    <type>DateTime</type>
</CustomField>