cmss/main/default/objects/Opportunity/fields/CustomText__c.field-meta.xml
<CustomField>
    <fullName>CustomText__c</fullName>
    <description>text which is part of the name of of the newly created opportunity</description>
    <label>Custom Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>