cmss/main/default/objects/Opportunity/fields/DeactivateDate__c.field-meta.xml
<CustomField>
    <fullName>DeactivateDate__c</fullName>
    <description>Datum, kdy má dojít k deaktivaci příležitosti</description>
    <label>Deactivate Date</label>
    <type>DateTime</type>
</CustomField>