cmss/main/default/objects/Opportunity/fields/DelegatedDate__c.field-meta.xml
<CustomField>
    <fullName>DelegatedDate__c</fullName>
    <description>Datum, kdy byla OP naposledy delegována</description>
    <label>Delegated Date</label>
    <type>DateTime</type>
</CustomField>