cmss/main/default/objects/Opportunity/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>Termín pro dokončení příležitosti -do kdy má OZ příležitost zpracovat</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>