cmss/main/default/objects/Opportunity/fields/OfferNumber__c.field-meta.xml
<CustomField>
    <fullName>OfferNumber__c</fullName>
    <description>ID nabídky</description>
    <label>Offer Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>