cmss/main/default/objects/Opportunity/fields/OfferType__c.field-meta.xml
<CustomField>
    <fullName>OfferType__c</fullName>
    <description>Typ nabídky - Product 2 - ePrescore, eÚvěry, Běžný účet</description>
    <label>Offer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>