cmss/main/default/objects/Opportunity/fields/OriginalAsset__c.field-meta.xml
<CustomField>
    <fullName>OriginalAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset from which was the opportunity created</description>
    <label>Original Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>