cmss/main/default/objects/Opportunity/fields/OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail__c</fullName>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerEmail</label>
    <type>Text</type>
</CustomField>