cmss/main/default/objects/Opportunity/fields/OwnerPhone1__c.field-meta.xml
<CustomField>
    <fullName>OwnerPhone1__c</fullName>
    <formula>Owner.Phone1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerPhone1</label>
    <type>Text</type>
</CustomField>