cmss/main/default/objects/Opportunity/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Typ produktu - Product2</description>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>