cmss/main/default/objects/Opportunity/fields/ServiceCategory__c.field-meta.xml
<CustomField>
    <fullName>ServiceCategory__c</fullName>
    <description>SBDA_ACTIVITY_MANAGEMENT.CATEGORY</description>
    <label>Service Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>