cmss/main/default/objects/Opportunity/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <label>State Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Open</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Won</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Lost</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>