cmss/main/default/objects/Opportunity/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <label>Valid To</label>
    <type>DateTime</type>
</CustomField>