cmss/main/default/objects/Opportunity/recordTypes/Editable.recordType-meta.xml
<RecordType>
    <fullName>Editable</fullName>
    <active>true</active>
    <businessProcess>CMSSSalesProcess</businessProcess>
    <description>Editable opp for stages 1 (nová), 2 (rozpracovaná) and 3 (uzavřená pozitivně)</description>
    <label>Editable</label>
</RecordType>