cmss/main/default/objects/Opportunity/recordTypes/NotEditable.recordType-meta.xml
<RecordType>
    <fullName>NotEditable</fullName>
    <active>false</active>
    <businessProcess>CMSSSalesProcess</businessProcess>
    <description>Not editable opp for stages 5 (Uzavřená negativně) and 7 (Spárovaná)</description>
    <label>Not Editable</label>
</RecordType>