cmss/main/default/objects/Opportunity/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <businessProcess>CMSSSalesProcess</businessProcess>
    <description>Technický record type pro servisní aktivity</description>
    <label>Service</label>
</RecordType>