cmss/main/default/objects/Opportunity/validationRules/EditOnceOppIsNotNew.validationRule-meta.xml
<ValidationRule>
    <fullName>EditOnceOppIsNotNew</fullName>
    <active>true</active>
    <description>Once Opp stages is different than 1, it can&#39;t be changed back to stage 1 again.</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName,&quot;1&quot;),
CASE(PRIORVALUE(StageName),
&quot;1&quot;,1,
0) = 0
)</errorConditionFormula>
    <errorMessage>Stage can&#39;t be changed back to 1.</errorMessage>
</ValidationRule>