cmss/main/default/objects/Opportunity/validationRules/EditStageOnceOppIsClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>EditStageOnceOppIsClosed</fullName>
    <active>true</active>
    <description
	>Once Opportunity is in stages 5 (Uzavřená negativně) or 7 (Spárovaná) the stage can&apos;t be changed again.</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName),
!ISPICKVAL(StageName,&apos;8&apos;),
CASE(PRIORVALUE(StageName),
&quot;1&quot;,1,
&quot;2&quot;,1,
&quot;3&quot;,1,
0) = 0
)</errorConditionFormula>
    <errorMessage>Stage change is not allowed once it is closed lost or paired.</errorMessage>
</ValidationRule>