cmss/main/default/objects/Opportunity/validationRules/ReguiredReasonForLostOpp.validationRule-meta.xml
<ValidationRule>
    <fullName>ReguiredReasonForLostOpp</fullName>
    <active>true</active>
    <description>If opportunity = 5 (uzavřená negativně), value for Reason__c must be chosen.</description>
    <errorConditionFormula>ISPICKVAL( StageName , &#39;5&#39;)  &amp;&amp;  ISPICKVAL(Reason__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>To close lost the opportunity, field reason must be filled.</errorMessage>
</ValidationRule>