cmss/main/default/objects/Opportunity/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Reason__c</columns>
    <columns>DueDate__c</columns>
    <columns>CreatedDateTime__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Opportunity.Service</value>
    </filters>
    <label>Všechny</label>
</ListView>