cmss/main/default/objects/Opportunity/listViews/AllServiceActivities.listView-meta.xml
<ListView>
    <fullName>AllServiceActivities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Category__c</columns>
    <columns>ValidFrom__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Reason__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Service</value>
    </filters>
    <label>Všechny servisní aktivity</label>
    <sharedTo>
        <role>X69_948011_mng</role>
    </sharedTo>
</ListView>