cmss/main/default/objects/Opportunity/listViews/Moje.listView-meta.xml
<ListView>
    <fullName>Moje</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Reason__c</columns>
    <columns>DueDate__c</columns>
    <columns>CreatedDateTime__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Moje</label>
</ListView>