cmss/main/default/objects/Opportunity/listViews/MyOpenDeals.listView-meta.xml
<ListView>
    <fullName>MyOpenDeals</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Moje otevřené příležitosti</label>
</ListView>