cmss/main/default/objects/Opportunity/listViews/TerminTentoMesic.listView-meta.xml
<ListView>
    <fullName>TerminTentoMesic</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Reason__c</columns>
    <columns>DueDate__c</columns>
    <columns>CreatedDateTime__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DueDate__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Termín tento měsíc</label>
</ListView>