cmss/main/default/objects/Opportunity/listViews/VsechnyNeaktivni.listView-meta.xml
<ListView>
    <fullName>VsechnyNeaktivni</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Reason__c</columns>
    <columns>DueDate__c</columns>
    <columns>CreatedDateTime__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Všechny neaktivní</label>
</ListView>